--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist/",
+    "dev": "nodemon src/index.ts",
     "prebuild": "npm run clean",
     "test": "jest",
     "test:interactive": "jest --watchAll"
@@ -20,7 +21,9 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
     "ts-jest": "^26.4.4",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
 }
