--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -19,6 +19,7 @@
       "import/extensions": [2, "never"],
       "import/no-unresolved": "off",
       "indent": [2, 4],
+      "max-len": [2, 90],
       "semi": [2, "never"]
     }
 }
