--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,11 @@ version: "3.8"
 services:
   app:
     build: .
+    ports:
+      - 4000:4000
+    environment:
+      HOST: 0.0.0.0
+      PORT: 4000
   dev:
     extends: "app"
     build:
