--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,28 @@
-workflow "Deploy to Heroku" {
-  on = "push"
-  resolves = "release"
-}
-
-action "login" {
-  uses = "actions/heroku@master"
-  args = "container:login"
-  secrets = ["HEROKU_API_KEY"]
-}
-
-action "push" {
-  uses = "actions/heroku@master"
-  needs = "login"
-  args = "container:push -a typed-movies"
-  secrets = ["HEROKU_API_KEY"]
-}
-
-action "release" {
-  uses = "actions/heroku@master"
-  needs = "push"
-  args = "container:release -a typed-movies web"
-  secrets = ["HEROKU_API_KEY"]
+on:
+  push:
+    branches:
+      - main
+name: Deploy to Heroku
+jobs:
+  release:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - name: login
+      uses: actions/heroku@master
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      with:
+        args: container:login
+    - name: push
+      uses: actions/heroku@master
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      with:
+        args: container:push -a typed-movies web
+    - name: release
+      uses: actions/heroku@master
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      with:
+        args: container:release -a typed-movies web
